# pySagredo

./: README.md  pyproject.toml
lean4_agent/: __init__.py  main.py
lean4_agent/evals/autoformalize_proof/: imo_1964_p1_2.json  mathd_algebra_101.json
lean4_agent/gym/: __init__.py
lean4_agent/llm/: __init__.py
lean4_agent/prove/: __init__.py
lean4_agent/tests/: List_append_length.lean  List_mem_of_ne_of_mem.lean
pysagredo/: __init__.py  main.py
pysagredo/evals/autoformalize_proof/: mathd_algebra_101.json
pysagredo/evals/f2f/: List_append_length.lean  List_mem_of_ne_of_mem.lean  Topology_homeomorph.lean
pysagredo/gym/: __init__.py
pysagredo/llm/: __init__.py
pysagredo/prove/: __init__.py
pysagredo/util/: config.py
tests/: test_gym.py
